--- a/react/firebase_project/.env
+++ b/react/firebase_project/.env
@@ -1,8 +1,7 @@
-FIREBASE_API_KEY = "AIzaSyBHwlyjIw0uSnWCI5BL6_F4iwz-8EPEl0A";
-FIREBASE_AUTH-DOMAIN = "fir-practice-7a8f4.firebaseapp.com";
-FIREBASE_DATABASE_URL = "";
-FIREBASE_PROJECT_ID = "fir-practice-7a8f4";
-FIREBASE_STORAGE_BUCKET = "fir-practice-7a8f4.firebasestorage.app",
-FIREBASE_MESSAGING_SENDER_ID = "492924643677",
-FIREBASE_APP_ID = "1:492924643677:web:70241341f118f4bfb260b4",
-FIREBASE_MEASUREMENT_ID = "G-TQ9BJVPGLL"
+VITE_FIREBASE_API_KEY=AIzaSyAyDMPW0wujt4TjdDIlSUyTu1BEc0pKrkQ
+VITE_FIREBASE_AUTH_DOMAIN=fir-class-526f7.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=fir-class-526f7
+VITE_FIREBASE_STORAGE_BUCKET=fir-class-526f7.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1007319102532
+VITE_FIREBASE_APP_ID=1:1007319102532:web:b8ea0f2d7048e07365b811
+VITE_FIREBASE_MEASUREMENT_ID=G-SR0XQGX1MX
