--- a/Nodejs-saylani/express-auth/package.json
+++ b/Nodejs-saylani/express-auth/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
